force-app/main/default/objects/LiveAgentSession/fields/Time_Active_Chat_s__c.field-meta.xml
<CustomField>
    <fullName>Time_Active_Chat_s__c</fullName>
    <description>Time spent in active chats during chat session (minutes)</description>
    <formula>TimeInChats / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time spent in active chats during chat session (minutes)</inlineHelpText>
    <label>Time Active Chat(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>