force-app/main/default/objects/LiveAgentSession/fields/Time_at_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Time_at_Capacity__c</fullName>
    <description>Time at full chat capacity during chat session (minutes)</description>
    <formula>TimeAtCapacity / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time at full chat capacity during chat session (minutes)</inlineHelpText>
    <label>Time at Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>