force-app/main/default/objects/LiveAgentSession/fields/Time_Away__c.field-meta.xml
<CustomField>
    <fullName>Time_Away__c</fullName>
    <description>Time spent in &apos;Away&apos; status during chat session (minutes)</description>
    <formula>TimeInAwayStatus / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time spent in &apos;Away&apos; status during chat session (minutes)</inlineHelpText>
    <label>Time Away</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>