force-app/main/default/objects/LiveAgentSession/fields/Time_Idle__c.field-meta.xml
<CustomField>
    <fullName>Time_Idle__c</fullName>
    <description>Time spent in &apos;Idle&apos; status during chat session (minutes)</description>
    <formula>( TimeIdle ) / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time spent in &apos;Idle&apos; status during chat session (minutes)</inlineHelpText>
    <label>Time Idle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>