force-app/main/default/objects/LiveAgentSession/fields/Time_Online__c.field-meta.xml
<CustomField>
    <fullName>Time_Online__c</fullName>
    <description>Time spent in &apos;Online&apos; status during chat session (minutes)</description>
    <formula>( TimeInOnlineStatus ) / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time spent in &apos;Online&apos; status during chat session (minutes)</inlineHelpText>
    <label>Time Online</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>