force-app/main/default/objects/LiveAgentSession/fields/Total_Session_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Session_Time__c</fullName>
    <description>Total time from Login Time to Logout Time (minutes)</description>
    <formula>(LogoutTime -  LoginTime)* 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time from Login Time to Logout Time (minutes)</inlineHelpText>
    <label>Total Session Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>