force-app/main/default/objects/LiveAgentSession/listViews/UBQT_CO_Lightning_Chat_LiveAgentSession.listView-meta.xml
<ListView>
    <fullName>UBQT_CO_Lightning_Chat_LiveAgentSession</fullName>
    <filterScope>Queue</filterScope>
    <label>UBQT CO Lightning Chat</label>
    <queue>UBQT_CO_Lightning_Chat</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>