force-app/main/default/objects/LiveAgentSession/listViews/UQBT_Chat_Test_LiveAgentSession.listView-meta.xml
<ListView>
    <fullName>UQBT_Chat_Test_LiveAgentSession</fullName>
    <filterScope>Queue</filterScope>
    <label>UBQT EE Lightning Chat</label>
    <queue>UBQT_EE_Lightning_Chat</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>